[package]
name = "conerror"
version = "0.1.12"
edition = "2021"
description = "Provides a macro that automatically adds context to errors"
license = "MIT"
repository = "https://github.com/qtoolco/conerror"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conerror_macro = {  path = "conerror_macro" }
serde = { version = "1.0.219", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

[features]
default = ["send_sync"]
send_sync = []
serde = ["dep:serde"]
wasm-bindgen = ["dep:wasm-bindgen"]
serde-wasm-bindgen = ["dep:serde-wasm-bindgen"]
